crates/webfang_mcp/tests/snapshots/sitemap_crawl_run_staleness_test__sitemap_parity_mcp.snap
---
source: crates/webfang_mcp/tests/sitemap_crawl_run_staleness_test.rs
assertion_line: 624
expression: "webfang_test_utils::redact_nondeterministic(no_temp_paths,\n&sorted_render(&mcp_records))"
---
{"checksum_sha256":"de851c0fd74a327d3fe0ea9a25790dc35e72de00055c39780bee828746354610","content":"Heading parity-seedMarker parity-seed: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for parity-seed keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":477,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker parity-seed: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"[TIMESTAMP]","title":"Staleness parity-seed","url":"http://127.0.0.1:<PORT>/","word_count":76}
{"checksum_sha256":"82b0a4ec21651a0870e26ef4e1faed72801d8baf86836c45d133de2533d810ab","content":"Heading parity-oneMarker parity-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for parity-one keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":474,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker parity-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"[TIMESTAMP]","title":"Staleness parity-one","url":"http://127.0.0.1:<PORT>/c1","word_count":76}
{"checksum_sha256":"63f0b61dcb4f8cbcc4f7f98ac5324bc2c5f8662bcf27566dbba6953f621b9fef","content":"Heading parity-twoMarker parity-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for parity-two keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":474,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker parity-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"[TIMESTAMP]","title":"Staleness parity-two","url":"http://127.0.0.1:<PORT>/c2","word_count":76}
