crates/webfang_mcp/tests/snapshots/sitemap_crawl_run_staleness_test__staleness_baseline_run_a.snap
---
source: crates/webfang_mcp/tests/sitemap_crawl_run_staleness_test.rs
assertion_line: 291
expression: "webfang_test_utils::redact_nondeterministic(out.path(),\n&sorted_render(&records_a))"
---
{"checksum_sha256":"1b69b1b16e5a3e2b9d4993446a23522c0472f439b70ad8c08ad32cc3a551a62f","content":"a1 a2Heading seed-aMarker seed-a: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for seed-a keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":467,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker seed-a: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness seed-a","url":"http://127.0.0.1:<PORT>/","word_count":77}
{"checksum_sha256":"b5d9831b1debe09f1964694662c260f689bf60e7047357d974c192e227432e2a","content":"Heading alpha-oneMarker alpha-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for alpha-one keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":471,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker alpha-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness alpha-one","url":"http://127.0.0.1:<PORT>/a1","word_count":76}
{"checksum_sha256":"9d7d673012d57632564de277022a733d99e386997aa50055cf0fc37bc2317c76","content":"Heading alpha-twoMarker alpha-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for alpha-two keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":471,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker alpha-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness alpha-two","url":"http://127.0.0.1:<PORT>/a2","word_count":76}
