crates/webfang_mcp/tests/snapshots/sitemap_crawl_run_staleness_test__staleness_sitemap_run_b.snap
---
source: crates/webfang_mcp/tests/sitemap_crawl_run_staleness_test.rs
assertion_line: 358
expression: "webfang_test_utils::redact_nondeterministic(out.path(),\n&sorted_render(&records_b))"
---
{"checksum_sha256":"8c16b9a59329b2d1aec88f396c87b5cdd0ee9faa26e138718335383b2525901e","content":"Heading seed-bMarker seed-b: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for seed-b keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":462,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker seed-b: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness seed-b","url":"http://127.0.0.1:<PORT>/","word_count":76}
{"checksum_sha256":"33a9d222611a11fba8e2dbaeb6f8c17a551d08346deba7fb0f9dd79b43a1ec1f","content":"Heading beta-oneMarker beta-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for beta-one keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":468,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker beta-one: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness beta-one","url":"http://127.0.0.1:<PORT>/b1","word_count":76}
{"checksum_sha256":"4379d139b177ba6c8448bbf5725d5d7e400ba2332288e2015a31a30c184ea29c","content":"Heading beta-twoMarker beta-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface.A second paragraph for beta-two keeps the extracted text comfortably above the guard with more plain words that carry no links, no scripts, and no noise at all here.","content_length":468,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Marker beta-two: the quick brown fox jumps over the lazy dog while the staleness fixture holds its ground and repeats enough ordinary sentences for the readability pipeline to accept this document as the main content of the page without tripping the minimum content guard at any surface."},"metadata_version":"2.1.0","reading_time":1,"timestamp_utc":"<TIMESTAMP>","title":"Staleness beta-two","url":"http://127.0.0.1:<PORT>/b2","word_count":76}
